[package]
name = "with"
version = "0.1.0"
authors = ["David <if_coding@fastmail.com>"]
edition = "2018"

description = "A collection of Kotlin-esque blanket impl helper functions, enabling easier function chaining patterns."
repository = "https://github.com/dlo9/with"
readme = "README.md"
categories = ["rust-patterns", "no-std"]
keywords = ["kotlin", "scope", "ergonomics"]
license = "MIT"

[features]
nightly = []

[dependencies]
