[package]
authors = ["David <if_coding@fastmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "A collection of Kotlin-esque blanket impl helper functions, enabling easier function chaining patterns."
edition = "2018"
keywords = ["kotlin", "scope", "function", "ergonomics"]
license = "MIT"
name = "also"
repository = "https://github.com/dlo9/also"
version = "0.1.0"

[features]
all = ["nightly", "std"]
default = ["std"]
nightly = []
std = []
